--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        stag {
+            buildConfigField 'int', 'DEBUGMODE', '1'
+            buildConfigField "com.psi.monitor.controllers.ApiConfig", "API_CONFIG", "com.psi.monitor.controllers.ApiConfig.PROD"
+            return void
+        }
+        prod {
+            buildConfigField 'int', 'DEBUGMODE', '0'
+            buildConfigField "com.psi.monitor.controllers.ApiConfig", "API_CONFIG", "com.psi.monitor.controllers.ApiConfig.STAG"
+            return void
+        }
+    }
 }
 
 dependencies {
@@ -24,14 +36,28 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile('com.android.support.test.espresso:espresso-intents:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile('com.android.support.test:runner:0.5', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile('com.android.support.test:rules:0.5', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile 'com.squareup.retrofit2:retrofit-mock:2.2.0'
+    androidTestCompile ('com.squareup.okhttp:mockwebserver:2.7.0')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
 }
